# terminal-chat

./: Cargo.toml  README.md
src/: main.rs  openai.rs
