[package]
name = "terminal_chat"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Ituski <2018.itsuki@gmail.com>"]
description = "A terminal chat tool using openAI."
readme = "README.md"
homepage = "https://github.com/0Itsuki0/terminal-chat"
repository = "https://github.com/0Itsuki0/terminal-chat"
keywords = ["cli", "chat", "openAIai"]
categories = ["command-line-utilities"]



[dependencies]
reqwest = "0.11.18"
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.104"
termimad = "0.23.2"
tokio = {version = "1.29.1", features = ["full"] }
